# memsense-eval

./: README.md  pyproject.toml  start.md
configs/: full_pipeline.yaml  ingest_only.yaml  judge_only.yaml  qa_judge.yaml
data/: locomo10_small.json  locomo10_subset.json  mock.json
memsense_eval/: __init__.py  __main__.py  cli.py
memsense_eval/engine/: __init__.py  data_manager.py  flow.py  pipeline.py  resource.py
memsense_eval/resources/: __init__.py  embedding_wait.py  filter.py  ingest.py  judge.py  locomo_reader.py  qa.py  qa_results_reader.py  summary.py
output/: grades.full_eval.json  qa_results.jsonl  summary.full_eval.json
scripts/: reset-env.sh
